parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHARACTER_TYPE

Grammar

Rule 0     S' -> main
Rule 1     main -> FILE_BEGINNING statement
Rule 2     main -> main FILE_END
Rule 3     main -> main statement
Rule 4     statement -> PRINT expression
Rule 5     expression -> PROMPT expression
Rule 6     expression -> STRING
Rule 7     expression -> NUMBER
Rule 8     expression -> CHARACTER
Rule 9     expression -> TRUE
Rule 10    expression -> FALSE
Rule 11    expression -> STRING_TYPE
Rule 12    expression -> NUMBER_TYPE
Rule 13    expression -> RATIO_TYPE
Rule 14    expression -> BOOLEAN_TYPE
Rule 15    expression -> ID
Rule 16    expression -> ADD expression expression
Rule 17    expression -> SUBTRACT expression expression
Rule 18    expression -> MULTIPLY expression expression
Rule 19    expression -> DIVIDE expression expression
Rule 20    expression -> AND expression expression
Rule 21    expression -> OR expression expression
Rule 22    expression -> XOR expression expression
Rule 23    expression -> NOT expression
Rule 24    expression -> EQUALS expression expression
Rule 25    expression -> GREATER expression expression
Rule 26    expression -> GREATER_OR_EQUAL expression expression
Rule 27    expression -> LESSER expression expression
Rule 28    expression -> LESSER_OR_EQUAL expression expression
Rule 29    if_statement -> IF expression statement_list
Rule 30    if_statement -> if_statement ELIF expression statement_list
Rule 31    if_statement -> if_statement ELSE statement_list
Rule 32    statement -> if_statement END_LOOP
Rule 33    statement -> WHILE expression statement_list END_LOOP
Rule 34    statement_list -> THEN statement
Rule 35    statement_list -> END_HEADER statement
Rule 36    statement_list -> statement_list END
Rule 37    statement_list -> statement_list statement
Rule 38    argument -> ARGUMENT_KEYWORD expression expression
Rule 39    func_header -> BEGIN_HEADER expression expression argument_list
Rule 40    argument_list -> BEGIN_ARGUMENTS argument
Rule 41    argument_list -> NO_ARGUMENTS
Rule 42    argument_list -> argument_list END_ARGUMENTS
Rule 43    argument_list -> argument_list argument
Rule 44    statement -> DECLARE_FUNCTION func_header statement_list END_FUNCTION
Rule 45    statement -> RETURN expression
Rule 46    expression -> CALL_FUNCTION ID expression_list END_ARGUMENTS
Rule 47    expression -> CALL_FUNCTION ID NO_ARGUMENTS
Rule 48    statement -> CALL_FUNCTION_STATEMENT ID expression_list END_ARGUMENTS
Rule 49    statement -> CALL_FUNCTION_STATEMENT ID NO_ARGUMENTS
Rule 50    expression_list -> BEGIN_ARGUMENTS expression
Rule 51    expression_list -> expression_list expression
Rule 52    statement -> DECLARE_VAR expression expression
Rule 53    statement -> ASSIGN_VAR expression expression
Rule 54    statement -> INCREMENT expression
Rule 55    statement -> DECREMENT expression
Rule 56    expression -> CAST_VAR expression expression
Rule 57    statement -> DECLARE_ARR expression expression expression
Rule 58    statement -> EDIT_ARR expression expression expression
Rule 59    statement -> ASSIGN_ARR expression expression
Rule 60    statement -> DELETE_ELE expression expression
Rule 61    statement -> APPEND expression expression
Rule 62    expression -> RETRIEVE_ELE expression expression
Rule 63    expression -> CONVERT_TO_ARRAY expression
Rule 64    expression -> LENGTH expression

Terminals, with rules where they appear

ADD                  : 16
AND                  : 20
APPEND               : 61
ARGUMENT_KEYWORD     : 38
ASSIGN_ARR           : 59
ASSIGN_VAR           : 53
BEGIN_ARGUMENTS      : 40 50
BEGIN_HEADER         : 39
BOOLEAN_TYPE         : 14
CALL_FUNCTION        : 46 47
CALL_FUNCTION_STATEMENT : 48 49
CAST_VAR             : 56
CHARACTER            : 8
CHARACTER_TYPE       : 
CONVERT_TO_ARRAY     : 63
DECLARE_ARR          : 57
DECLARE_FUNCTION     : 44
DECLARE_VAR          : 52
DECREMENT            : 55
DELETE_ELE           : 60
DIVIDE               : 19
EDIT_ARR             : 58
ELIF                 : 30
ELSE                 : 31
END                  : 36
END_ARGUMENTS        : 42 46 48
END_FUNCTION         : 44
END_HEADER           : 35
END_LOOP             : 32 33
EQUALS               : 24
FALSE                : 10
FILE_BEGINNING       : 1
FILE_END             : 2
GREATER              : 25
GREATER_OR_EQUAL     : 26
ID                   : 15 46 47 48 49
IF                   : 29
INCREMENT            : 54
LENGTH               : 64
LESSER               : 27
LESSER_OR_EQUAL      : 28
MULTIPLY             : 18
NOT                  : 23
NO_ARGUMENTS         : 41 47 49
NUMBER               : 7
NUMBER_TYPE          : 12
OR                   : 21
PRINT                : 4
PROMPT               : 5
RATIO_TYPE           : 13
RETRIEVE_ELE         : 62
RETURN               : 45
STRING               : 6
STRING_TYPE          : 11
SUBTRACT             : 17
THEN                 : 34
TRUE                 : 9
WHILE                : 33
XOR                  : 22
error                : 

Nonterminals, with rules where they appear

argument             : 40 43
argument_list        : 39 42 43
expression           : 4 5 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 24 25 25 26 26 27 27 28 28 29 30 33 38 38 39 39 45 50 51 52 52 53 53 54 55 56 56 57 57 57 58 58 58 59 59 60 60 61 61 62 62 63 64
expression_list      : 46 48 51
func_header          : 44
if_statement         : 30 31 32
main                 : 2 3 0
statement            : 1 3 34 35 37
statement_list       : 29 30 31 33 36 37 44

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . FILE_BEGINNING statement
    (2) main -> . main FILE_END
    (3) main -> . main statement

    FILE_BEGINNING  shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .
    (2) main -> main . FILE_END
    (3) main -> main . statement
    (4) statement -> . PRINT expression
    (32) statement -> . if_statement END_LOOP
    (33) statement -> . WHILE expression statement_list END_LOOP
    (44) statement -> . DECLARE_FUNCTION func_header statement_list END_FUNCTION
    (45) statement -> . RETURN expression
    (48) statement -> . CALL_FUNCTION_STATEMENT ID expression_list END_ARGUMENTS
    (49) statement -> . CALL_FUNCTION_STATEMENT ID NO_ARGUMENTS
    (52) statement -> . DECLARE_VAR expression expression
    (53) statement -> . ASSIGN_VAR expression expression
    (54) statement -> . INCREMENT expression
    (55) statement -> . DECREMENT expression
    (57) statement -> . DECLARE_ARR expression expression expression
    (58) statement -> . EDIT_ARR expression expression expression
    (59) statement -> . ASSIGN_ARR expression expression
    (60) statement -> . DELETE_ELE expression expression
    (61) statement -> . APPEND expression expression
    (29) if_statement -> . IF expression statement_list
    (30) if_statement -> . if_statement ELIF expression statement_list
    (31) if_statement -> . if_statement ELSE statement_list

    FILE_END        shift and go to state 3
    PRINT           shift and go to state 5
    WHILE           shift and go to state 7
    DECLARE_FUNCTION shift and go to state 8
    RETURN          shift and go to state 9
    CALL_FUNCTION_STATEMENT shift and go to state 10
    DECLARE_VAR     shift and go to state 11
    ASSIGN_VAR      shift and go to state 12
    INCREMENT       shift and go to state 13
    DECREMENT       shift and go to state 14
    DECLARE_ARR     shift and go to state 15
    EDIT_ARR        shift and go to state 16
    ASSIGN_ARR      shift and go to state 17
    DELETE_ELE      shift and go to state 18
    APPEND          shift and go to state 19
    IF              shift and go to state 20

    statement                      shift and go to state 4
    if_statement                   shift and go to state 6

state 2

    (1) main -> FILE_BEGINNING . statement
    (4) statement -> . PRINT expression
    (32) statement -> . if_statement END_LOOP
    (33) statement -> . WHILE expression statement_list END_LOOP
    (44) statement -> . DECLARE_FUNCTION func_header statement_list END_FUNCTION
    (45) statement -> . RETURN expression
    (48) statement -> . CALL_FUNCTION_STATEMENT ID expression_list END_ARGUMENTS
    (49) statement -> . CALL_FUNCTION_STATEMENT ID NO_ARGUMENTS
    (52) statement -> . DECLARE_VAR expression expression
    (53) statement -> . ASSIGN_VAR expression expression
    (54) statement -> . INCREMENT expression
    (55) statement -> . DECREMENT expression
    (57) statement -> . DECLARE_ARR expression expression expression
    (58) statement -> . EDIT_ARR expression expression expression
    (59) statement -> . ASSIGN_ARR expression expression
    (60) statement -> . DELETE_ELE expression expression
    (61) statement -> . APPEND expression expression
    (29) if_statement -> . IF expression statement_list
    (30) if_statement -> . if_statement ELIF expression statement_list
    (31) if_statement -> . if_statement ELSE statement_list

    PRINT           shift and go to state 5
    WHILE           shift and go to state 7
    DECLARE_FUNCTION shift and go to state 8
    RETURN          shift and go to state 9
    CALL_FUNCTION_STATEMENT shift and go to state 10
    DECLARE_VAR     shift and go to state 11
    ASSIGN_VAR      shift and go to state 12
    INCREMENT       shift and go to state 13
    DECREMENT       shift and go to state 14
    DECLARE_ARR     shift and go to state 15
    EDIT_ARR        shift and go to state 16
    ASSIGN_ARR      shift and go to state 17
    DELETE_ELE      shift and go to state 18
    APPEND          shift and go to state 19
    IF              shift and go to state 20

    statement                      shift and go to state 21
    if_statement                   shift and go to state 6

state 3

    (2) main -> main FILE_END .

    FILE_END        reduce using rule 2 (main -> main FILE_END .)
    PRINT           reduce using rule 2 (main -> main FILE_END .)
    WHILE           reduce using rule 2 (main -> main FILE_END .)
    DECLARE_FUNCTION reduce using rule 2 (main -> main FILE_END .)
    RETURN          reduce using rule 2 (main -> main FILE_END .)
    CALL_FUNCTION_STATEMENT reduce using rule 2 (main -> main FILE_END .)
    DECLARE_VAR     reduce using rule 2 (main -> main FILE_END .)
    ASSIGN_VAR      reduce using rule 2 (main -> main FILE_END .)
    INCREMENT       reduce using rule 2 (main -> main FILE_END .)
    DECREMENT       reduce using rule 2 (main -> main FILE_END .)
    DECLARE_ARR     reduce using rule 2 (main -> main FILE_END .)
    EDIT_ARR        reduce using rule 2 (main -> main FILE_END .)
    ASSIGN_ARR      reduce using rule 2 (main -> main FILE_END .)
    DELETE_ELE      reduce using rule 2 (main -> main FILE_END .)
    APPEND          reduce using rule 2 (main -> main FILE_END .)
    IF              reduce using rule 2 (main -> main FILE_END .)
    $end            reduce using rule 2 (main -> main FILE_END .)


state 4

    (3) main -> main statement .

    FILE_END        reduce using rule 3 (main -> main statement .)
    PRINT           reduce using rule 3 (main -> main statement .)
    WHILE           reduce using rule 3 (main -> main statement .)
    DECLARE_FUNCTION reduce using rule 3 (main -> main statement .)
    RETURN          reduce using rule 3 (main -> main statement .)
    CALL_FUNCTION_STATEMENT reduce using rule 3 (main -> main statement .)
    DECLARE_VAR     reduce using rule 3 (main -> main statement .)
    ASSIGN_VAR      reduce using rule 3 (main -> main statement .)
    INCREMENT       reduce using rule 3 (main -> main statement .)
    DECREMENT       reduce using rule 3 (main -> main statement .)
    DECLARE_ARR     reduce using rule 3 (main -> main statement .)
    EDIT_ARR        reduce using rule 3 (main -> main statement .)
    ASSIGN_ARR      reduce using rule 3 (main -> main statement .)
    DELETE_ELE      reduce using rule 3 (main -> main statement .)
    APPEND          reduce using rule 3 (main -> main statement .)
    IF              reduce using rule 3 (main -> main statement .)
    $end            reduce using rule 3 (main -> main statement .)


state 5

    (4) statement -> PRINT . expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 22

state 6

    (32) statement -> if_statement . END_LOOP
    (30) if_statement -> if_statement . ELIF expression statement_list
    (31) if_statement -> if_statement . ELSE statement_list

    END_LOOP        shift and go to state 52
    ELIF            shift and go to state 53
    ELSE            shift and go to state 54


state 7

    (33) statement -> WHILE . expression statement_list END_LOOP
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 55

state 8

    (44) statement -> DECLARE_FUNCTION . func_header statement_list END_FUNCTION
    (39) func_header -> . BEGIN_HEADER expression expression argument_list

    BEGIN_HEADER    shift and go to state 57

    func_header                    shift and go to state 56

state 9

    (45) statement -> RETURN . expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 58

state 10

    (48) statement -> CALL_FUNCTION_STATEMENT . ID expression_list END_ARGUMENTS
    (49) statement -> CALL_FUNCTION_STATEMENT . ID NO_ARGUMENTS

    ID              shift and go to state 59


state 11

    (52) statement -> DECLARE_VAR . expression expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 60

state 12

    (53) statement -> ASSIGN_VAR . expression expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 61

state 13

    (54) statement -> INCREMENT . expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 62

state 14

    (55) statement -> DECREMENT . expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 63

state 15

    (57) statement -> DECLARE_ARR . expression expression expression
    (5) expression -> . PROMPT expression
    (6) expression -> . STRING
    (7) expression -> . NUMBER
    (8) expression -> . CHARACTER
    (9) expression -> . TRUE
    (10) expression -> . FALSE
    (11) expression -> . STRING_TYPE
    (12) expression -> . NUMBER_TYPE
    (13) expression -> . RATIO_TYPE
    (14) expression -> . BOOLEAN_TYPE
    (15) expression -> . ID
    (16) expression -> . ADD expression expression
    (17) expression -> . SUBTRACT expression expression
    (18) expression -> . MULTIPLY expression expression
    (19) expression -> . DIVIDE expression expression
    (20) expression -> . AND expression expression
    (21) expression -> . OR expression expression
    (22) expression -> . XOR expression expression
    (23) expression -> . NOT expression
    (24) expression -> . EQUALS expression expression
    (25) expression -> . GREATER expression expression
    (26) expression -> . GREATER_OR_EQUAL expression expression
    (27) expression -> . LESSER expression expression
    (28) expression -> . LESSER_OR_EQUAL expression expression
    (46) expression -> . CALL_FUNCTION ID expression_list END_ARGUMENTS
    (47) expression -> . CALL_FUNCTION ID NO_ARGUMENTS
    (56) expression -> . CAST_VAR expression expression
    (62) expression -> . RETRIEVE_ELE expression expression
    (63) expression -> . CONVERT_TO_ARRAY expression
    (64) expression -> . LENGTH expression

    PROMPT          shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    CHARACTER       shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    NUMBER_TYPE     shift and go to state 30
    RATIO_TYPE      shift and go to state 31
    BOOLEAN_TYPE    shift and go to state 32
    ID              shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    AND             shift and go to state 38
    OR              shift and go to state 39
    XOR             shift and go to state 40
    NOT             shift and go to state 41
    EQUALS          shift and go to state 42
    GREATER         shift and go to state 43
    GREATER_OR_EQUAL shift and go to state 44
    LESSER          shift and go to state 45
    LESSER_OR_EQUAL shift and go to state 46
    CALL_FUNCTION   shift and go to state 47
    CAST_VAR        shift and go to state 48
    RETRIEVE_ELE    shift and go to state 49
    CONVERT_TO_ARRAY shift and go to state 50
    LENGTH          shift and go to state 51

    expression                     shift and go to state 64

state 16
